<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/membersFragment"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_members" />
    <item
        android:id="@+id/attendanceFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_attendance" />
    <item
        android:id="@+id/paymentsFragment"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_payments" />
    <item
        android:id="@+id/masterFragment"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/nav_more" />
</menu>
